--- a/app/flex/com/wefootball/components/friend/FriendInvitationListBox.mxml
+++ b/app/flex/com/wefootball/components/friend/FriendInvitationListBox.mxml
@@ -3,88 +3,94 @@
 <mx:TitleWindow xmlns:mx="http://www.adobe.com/2006/mxml"
 	title="您的好友邀请">
     
+    <mx:Metadata>
+    	[Event(name="friendUpdate",type="com.wefootball.events.FriendUpdateEvent")]
+    </mx:Metadata>
+    
     <mx:Script>
     	<![CDATA[
+    		import mx.collections.ArrayCollection;
+    		import com.wefootball.events.FriendUpdateEvent;
+    		import mx.collections.XMLListCollection;
     		import mx.controls.Alert;
+			import com.wefootball.model.Request;
+			import com.wefootball.model.User;
     		import mx.rpc.events.ResultEvent;
+    		import mx.rpc.events.FaultEvent;    		
     		
-    		private function updateFriendInvList():void{
-    			svcPreFriendRelationList.send();
-    		}
+    		[Bindable]
+    		private var requestList:ArrayCollection = new ArrayCollection;
     		
-    		internal function acceptFriendInv(invitation:Object):void{      													 
-      			svcFriendRelationCreate.request['friend_relation[user1_id]'] = invitation['applier_id'];
-    			svcFriendRelationCreate.request['friend_relation[user2_id]'] = invitation['host_id'];
-     			svcFriendRelationCreate.request['pre_id'] = invitation['id'];
-     			svcFriendRelationCreate.send();
+    		internal function acceptFriend(request:Object):void{      													     			
+     			User.currentUser.createFriend(request['id'],
+     										  handleFriendCreateResult,
+     										  handleFriendCreateFault
+     										  );
     		}
 
-     		private function handleFriendRelationCreate(event:ResultEvent):void{ 		
-    			updateFriendInvList();
+     		private function handleFriendCreateResult(event:ResultEvent):void{
+				dispatchEvent(new FriendUpdateEvent());
     		}
     		
-    		internal function rejectFriendInv(id:int):void{      													 
-      			svcPreFriendRelationDestroy.url = "/pre_friend_relations/" + id + ".xml";
-     			svcPreFriendRelationDestroy.send({_method:"DELETE"});
+			private function handleFriendCreateFault(event:FaultEvent):void {
+				Alert.show('Unknown Error', "Request hasn't been created");
+			}         		
+    		
+    		internal function rejectRequest(request_id:String):void{      													 
+     			Request.rejectRequest(request_id,
+     								 handleRequestRejectResult,
+     								 handleRequestRejectFault
+     								);
     		}
-     		private function handlePreFriendRelationDestroy(event:ResultEvent):void{
-     			updateFriendInvList();
-     		} 	  		 				
-    		 	
-     		private function listPreFriendRelations():void{
-     			svcPreFriendRelationList.send();
+     		private function handleRequestRejectResult(event:ResultEvent):void{
+				dispatchEvent(new FriendUpdateEvent());
      		}
-     		private function handlePreFriendRelationList(event:ResultEvent):void{
-     		}      					  		
+     		
+			private function handleRequestRejectFault(event:FaultEvent):void {
+				Alert.show('Unknown Error', "Request hasn't been rejected");
+			}     		 		 				
+    		 	
+     		public function listRequests():void{
+     			Request.listRequests(handleRequestListResult,handleRequestListFault);
+     		}
+     		private function handleRequestListResult(event:ResultEvent,rl:ArrayCollection):void{
+     			requestList = rl;			
+     		}
+			private function handleRequestListFault(event:FaultEvent):void {
+				Alert.show('Unknown Error', "Request hasn't been listed");
+			}     		   					  		
     	]]>	
     </mx:Script>
-    
-	<mx:HTTPService
-	    id="svcFriendRelationCreate"
-	    url="/friend_relations.xml"
-	    resultFormat="e4x"
-	    method="POST"
-	    result="handleFriendRelationCreate(event)"
-	/>
-	
-	<mx:HTTPService
-	    id="svcPreFriendRelationDestroy"
-	    resultFormat="e4x"
-	    method="POST"
-	    result="handlePreFriendRelationDestroy(event)"
-	/>
-	
-	<mx:HTTPService
-	    id="svcPreFriendRelationList"
-	    url="/pre_friend_relations.xml"
-	    resultFormat="e4x"
-	    method="GET"
-	    result="handlePreFriendRelationList(event)"
-	/>
-	<mx:XMLListCollection id="preFriendRelationsXLC"
-    source="{XMLList(svcPreFriendRelationList.lastResult.children())}"/>
 
-	<mx:DataGrid initialize="listPreFriendRelations()" dataProvider="{preFriendRelationsXLC}">      	
+    <mx:DateFormatter id="df" formatString="YYYY-MM-DD" />
+
+	<mx:DataGrid creationComplete="listRequests()" dataProvider="{requestList}">      	
     	<mx:columns>
-    	    <mx:DataGridColumn dataField="apply_date" />
-        	<mx:DataGridColumn dataField="applier_id" />
-        	<mx:DataGridColumn dataField="host_id" />
-        	<mx:DataGridColumn dataField="message" />        	
-        	<mx:DataGridColumn headerText="">
+    	    <mx:DataGridColumn dataField="apply_date" headerText="时间">
+				<mx:itemRenderer>
+					<mx:Component>
+						<mx:Label text="{outerDocument.df.format(data.apply_date)}"/>					
+					</mx:Component>
+				</mx:itemRenderer>
+			</mx:DataGridColumn>				    	    	
+        	<mx:DataGridColumn dataField="applier_name" headerText="申请人"/>
+        	<mx:DataGridColumn dataField="message" headerText="留言"/>        	
+        	<mx:DataGridColumn headerText="" resizable="false" sortable="false" dataField="message">
         		<mx:itemRenderer>
         			<mx:Component>
-        				<mx:Button label="接受" click="outerDocument.acceptFriendInv(data)" />
+        				<mx:Button label="接受" click="outerDocument.acceptFriend(data)" />
         			</mx:Component>
         		</mx:itemRenderer>
         	</mx:DataGridColumn>
-        	<mx:DataGridColumn headerText="">
+        	<mx:DataGridColumn headerText="" resizable="false" sortable="false" dataField="message">
         		<mx:itemRenderer>
         			<mx:Component>
-        				<mx:Button label="拒绝" click="outerDocument.rejectFriendInv(data['id'])" />
+        				<mx:Button label="拒绝" click="outerDocument.rejectRequest(data['id'])" />
         			</mx:Component>
         		</mx:itemRenderer>
         	</mx:DataGridColumn>        	
       	</mx:columns>	
-	</mx:DataGrid>
+	</mx:DataGrid>	
+	
 	
 </mx:TitleWindow>
