--- a/app/flex/com/wefootball/components/friend/FriendInvitationNotifyBox.mxml
+++ b/app/flex/com/wefootball/components/friend/FriendInvitationNotifyBox.mxml
@@ -1,5 +1,6 @@
-<!--<?xml version="1.0" encoding="utf-8"?>
-<mx:VBox xmlns:mx="http://www.adobe.com/2006/mxml"
+<?xml version="1.0" encoding="utf-8"?>
+<mx:VBox xmlns:mx="http://www.adobe.com/2006/mxml" />
+<!--<mx:VBox xmlns:mx="http://www.adobe.com/2006/mxml"
 	xmlns:wfFriend="com.wefootball.components.friend.*"
 	creationComplete="init()">
 	<mx:Script>		
