--- a/app/flex/com/wefootball/components/friend/FriendInvitationApplyBox.mxml
+++ b/app/flex/com/wefootball/components/friend/FriendInvitationApplyBox.mxml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<mx:Box xmlns:mx="http://www.adobe.com/2006/mxml" xmlns:wfv="com.wefootball.validators.*">
+<mx:TitleWindow xmlns:mx="http://www.adobe.com/2006/mxml" xmlns:wfv="com.wefootball.validators.*"
+	showCloseButton="true" close="event.target.visible=false" title="邀请">
 	<mx:Script>		
 		<![CDATA[
 			import mx.controls.Alert;
@@ -17,11 +18,16 @@
 				var results:Array = Validator.validateAll([messageValidator]);
 				if (results.length > 0) return false;
 				return true;
-			}		
+			}
+			private var host_id:String = "";		
           	
-          	public function createRequest():void {
+          	public function set hostId(hid:String):void{
+          		host_id = hid;
+          	}
+          	private function createRequest():void {
+          		if(host_id == "")
+          			return;
           		var applier_id:String = User.currentUser.id;
-          		var host_id:String = "1";//这里需要修改！！
           		var message:String = messageTA.text;
           		
           		Request.createRequest(applier_id,host_id,message,
@@ -31,6 +37,7 @@
           	}
           	
 			private function handleCreateRequestResult(event:ResultEvent):void {
+				this.visible = false;
 			}
 			
 			private function handleCreateRequestError(errors:ServerErrors, event:ResultEvent):void {
@@ -44,11 +51,11 @@
 		]]>
 	</mx:Script>
 	
-	<mx:Label text="请输入您想留的简短信息：" />
+	<mx:Label text="稍句话吧：" />
 	<mx:TextArea id="messageTA"/>
-	<mx:Button id="inviteButton" label="发出邀请" click="createRequest()" enabled="{validate(messageTA.text)}"/>
+	<mx:Button id="inviteButton" label="邀请" click="createRequest()" enabled="{validate(messageTA.text)}"/>
 	
 	<mx:StringValidator id="messageValidator" source="{messageTA}" property="text" maxLength="500" required="false"/>
 	<wfv:ServerErrorValidator field="message" listener="{messageTA}" serverErrors="{_serverErrors}" />	
 	
-</mx:Box>
+</mx:TitleWindow>
