--- a/app/flex/com/wefootball/components/message/MessageBox.mxml
+++ b/app/flex/com/wefootball/components/message/MessageBox.mxml
@@ -3,7 +3,7 @@
 <!--<mx:VBox>-->
 
 <mx:Metadata>
-	[Event(name="userDisplay", type="com.wefootball.events.UserDisplayEvent")]
+	[Event(name="userDisplay", type="com.wefootball.events.UserEvent")]
 	[Event(name="messageReply", type="com.wefootball.events.MessageDetailEvent")]
 </mx:Metadata>
 
@@ -15,7 +15,7 @@
     		import mx.controls.Alert;
     		import mx.rpc.events.ResultEvent;
     		import mx.rpc.events.FaultEvent;
-    		import com.wefootball.events.UserDisplayEvent;
+    		import com.wefootball.events.UserEvent;
     		import com.wefootball.model.User;
     		import com.wefootball.model.Message;
     		import mx.collections.XMLListCollection;
