--- a/app/flex/com/wefootball/components/PersonMainBox.mxml
+++ b/app/flex/com/wefootball/components/PersonMainBox.mxml
@@ -19,19 +19,16 @@
 	import mx.controls.Alert;
 	import com.wefootball.model.User;
 	import com.wefootball.components.message.MessageSendBox;
-	import com.wefootball.components.account.UpdateBox;
 	import com.wefootball.components.team.TeamCreateBox;
 	import com.wefootball.components.team.TeamBox;
 	import mx.managers.PopUpManager;
 	
 	private var messageSendBox:MessageSendBox = new MessageSendBox;
-	private var settingWindow:UpdateBox = new UpdateBox;
 	private var newTeamWindow:TeamCreateBox = new TeamCreateBox;
 	
  	private function init():void
 	{	
 		initPopupWindow(messageSendBox);
-		initPopupWindow(settingWindow);	
 		initPopupWindow(newTeamWindow);
 	}
 	private function initPopupWindow(dis:IFlexDisplayObject):void {
@@ -58,7 +55,7 @@
 				<mx:LinkButton label="我的信箱" click="personMainStack.selectedChild = myMessageBox"/>
 				<mx:LinkButton label="我的邀请" click="personMainStack.selectedChild = friendInvitationPage"/>	
 				<mx:LinkButton label="我的好友" click="personMainStack.selectedChild = myFriendListPage"/>	
-				<mx:LinkButton label="我的设置" click="settingWindow.visible = true;"/>
+				<!--<mx:LinkButton label="我的设置" click="settingWindow.visible = true;"/>-->
 				<!--<mx:LinkButton label="新建球队" click="newTeamWindow.visible = true;"/>-->
 			</mx:VBox>
 		</mx:ApplicationControlBar>
