--- a/app/flex/com/wefootball/components/MainBox.mxml
+++ b/app/flex/com/wefootball/components/MainBox.mxml
@@ -4,32 +4,35 @@
 	xmlns:tm="com.wefootball.components.team.*" 
 	xmlns:rt="com.wefootball.components.*"
 	height="100%" width="100%"
-	paddingLeft="20" paddingRight="20" paddingTop="20" paddingBottom="20">
+	paddingLeft="20" paddingRight="20" paddingTop="20" paddingBottom="20"
+	creationComplete="init()">
 <mx:Script>
 
 <![CDATA[
+	import mx.core.IFlexDisplayObject;
 	import com.wefootball.components.PersonMainBox;
 	import com.wefootball.components.TeamMainBox;
 	import com.wefootball.events.TeamDetailEvent;
+	import com.wefootball.components.account.UpdateBox;
+	import mx.managers.PopUpManager;
 	import mx.controls.Alert;
 	
+	private var personSettingWindow:UpdateBox = new UpdateBox;
 /* 	private var messageSendBox:MessageSendBox = new MessageSendBox;
-	private var settingWindow:UpdateBox = new UpdateBox;
-	private var newTeamWindow:TeamCreateBox = new TeamCreateBox;
+	private var newTeamWindow:TeamCreateBox = new TeamCreateBox;*/
 	
  	private function init():void
 	{	
-		initPopupWindow(messageSendBox);
-		initPopupWindow(settingWindow);	
-		initPopupWindow(newTeamWindow);
+		initPopupWindow(personSettingWindow);	
 	}
+	
 	private function initPopupWindow(dis:IFlexDisplayObject):void {
 		PopUpManager.addPopUp(dis, this);
 		PopUpManager.centerPopUp(dis);
 		dis.visible = false;
 	}
 	
-	private function sendMessage(m:MessageDetailEvent):void {
+	/*private function sendMessage(m:MessageDetailEvent):void {
 		messageSendBox.visible=true;
 		messageSendBox.message = m.message;
 	}*/
@@ -47,51 +50,11 @@
 	</mx:HBox>
 	<mx:HBox height="20" width="500"  horizontalAlign="right">
 		<mx:Button label="Button"/>
-		<mx:Button label="Button"/>
+		<mx:Button label="我的设置" click="personSettingWindow.visible = true;"/>
 		<mx:Button label="个人页面" click="turnToPersonPerspective()"/>
 	</mx:HBox>
 	<mx:ViewStack id="mainStack" width="100%" height="100%">
 		<rt:PersonMainBox id="personMain" teamDisplay="turnToTeamPerspective(event)"/>
 		<rt:TeamMainBox id="teamMain" />
 	</mx:ViewStack>
-<!--		<mx:ApplicationControlBar width="200" height="100%" 
-			paddingLeft="20" paddingRight="20" paddingTop="20" paddingBottom="20" >
-			<mx:VBox height="100%" width="100%" >
-				<mx:LinkButton label="我的信息" click="informationBox.user=User.currentUser;mainStack.selectedChild = userPage"/>
-				<mx:LinkButton label="我的球队" click="mainStack.selectedChild = myTeam"/>
-				<mx:LinkButton label="我的信箱" click="mainStack.selectedChild = myMessageBox"/>
-				<mx:LinkButton label="我的好友" click="mainStack.selectedChild = myFriend"/>
-				<mx:LinkButton label="我的设置" click="settingWindow.visible = true;"/>
-				<mx:LinkButton label="新建球队" click="newTeamWindow.visible = true;"/>
-			</mx:VBox>
-		</mx:ApplicationControlBar>
-		<mx:ApplicationControlBar width="700" height="100%" paddingTop="20" paddingBottom="20" >
-			<mx:ViewStack id="mainStack" width="100%" height="100%">
-				<mx:VBox width="100%" height="100%" id="userPage"
-					paddingLeft="20" paddingRight="20" paddingBottom="20" >
-					<mx:Label text="个人信息" styleName="head"/>
-					<acc:InformationBox height="100%" messageSend="sendMessage(event)" id="informationBox" user="{User.currentUser}"/>
-				</mx:VBox>
-				<mx:VBox width="100%" height="100%" id="myMessageBox"
-					paddingLeft="20" paddingRight="20" paddingBottom="20" >
-					<mx:Label text="我的信箱" styleName="head"/>
-					<msg:MessageBox height="100%" messageReply="sendMessage(event)" userDisplay="userDisplay(event)"/>
-				</mx:VBox>
-				<mx:VBox width="100%" height="100%" id="myTeam"
-					paddingLeft="20" paddingRight="20" paddingBottom="20" >
-					<mx:Label text="我的球队" styleName="head"/>
-					<tm:TeamBox height="100%"/>
-				</mx:VBox>
-				<mx:VBox width="100%" height="100%" id="myFriend"
-					paddingLeft="20" paddingRight="20" paddingBottom="20" >
-					<mx:Label text="我的好友" styleName="head"/>
-					<mx:VDividedBox width="625" height="100%">
-						<fr:FriendListBox height="100%"/>
-						<fr:FriendInvitationApplyBox height="100%"/>
-						<fr:FriendInvitationListBox height="100%"/>
-						<fr:FriendInvitationNotifyBox height="100%"/>
-					</mx:VDividedBox>
-				</mx:VBox>
-			</mx:ViewStack>
-		</mx:ApplicationControlBar>-->
 </mx:VBox>
